syntax = "proto3";

option go_package = "microsoft/attestation-container/protobuf";

package attestation_container;

// attestation_container service definition.
service AttestationContainer {
  // Fetches and returns attestation report and its endorsements.
  // In future it returns Certificate Revocation List (CRL) as well.
  rpc FetchAttestation (FetchAttestationRequest) returns (FetchAttestationReply) {}
}

message FetchAttestationRequest {
  bytes report_data = 1;
}

message FetchAttestationReply {
  bytes attestation = 1;
  bytes attestation_endorsement_certificates = 2;
  bytes uvm_endorsement = 3;
}
